# rules_gradle

./: .gitignore  BUILD  LICENSE  README.md  WORKSPACE  rules_gradle.bzl
examples/simple_gradle_project/: BUILD.bazel  settings.gradle.kts
